# final-project-me495

./: .gitignore  README.md  mover.repos
apriltags/: README.md  package.xml  setup.py
apriltags/apriltags/: get_apriltags.py  move_robot.py  our_node.py
apriltags/config/: tags.yaml
apriltags/launch/: get_apriltags.launch.xml
apriltags/rviz/: view_apriltags.rviz
polyglotbot/: package.xml  setup.cfg  setup.py
polyglotbot/launch/: polyglotbot.launch.xml
polyglotbot/polyglotbot/: polyglotbot.py
polyglotbot/test/: test_unit_something.py
polyglotbot_interfaces/: CMakeLists.txt  package.xml
polyglotbot_interfaces/srv/: GetCharacters.srv  StringToWaypoint.srv  TranslateString.srv  Write.srv
read_whiteboard/: README.md  citations.txt  package.xml  setup.cfg  setup.py
read_whiteboard/config/: tags.yaml
read_whiteboard/launch/: read_whiteboard.launch.xml
read_whiteboard/read_whiteboard/: computer_vision.py
speak_out/: README.md  package.xml  setup.cfg  setup.py
speak_out/speak_out/: README.md  speak.py
speech/: README.md  package.xml  setup.py
speech/speech/: listen_speech.py
string2waypoints/: README.md  package.xml  setup.cfg  setup.py  string2waypoint_node.py
string2waypoints/launch/: create_waypoint.launch.xml
string2waypoints/string2waypoints/: string2waypoint_node.py
svg/: MKSVG.py  create_svg.py  s2wp.py
translation_pkg/: README.md  package.xml  setup.cfg  setup.py
translation_pkg/test/: test_integration_something.py
translation_pkg/translation_pkg/: listener_node.py  translator_node.py
write_letters/: README.md  package.xml  setup.cfg  setup.py
write_letters/config/: parser.yaml  write_fake.yaml  write_real.yaml
write_letters/launch/: writer.launch.xml
write_letters/rviz/: franka.rviz
write_letters/write_letters/: send_letter.py  vec_parser.py  write.py
writer_interfaces/: CMakeLists.txt  package.xml
