<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>translation_pkg</name>
  <version>0.0.0</version>
  <description>Translates a word/phrase into a give language</description>
  <maintainer email="damienkoh2025@u.northwestern.edu">damien</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>polyglotbot_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
