<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>write_letters</name>
    <version>0.0.0</version>
    <description>Takes the coordinate and write that on the board</description>
    <maintainer email="JingkunLiu2025@u.northwestern.edu">allen</maintainer>
    <license>MIT</license>

    <build_depend>polyglotbot_interfaces</build_depend>
    <exec_depend>polyglotbot_interfaces</exec_depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>